--- a/manifests/kustomize/base/argo/workflow-controller-configmap.yaml
+++ b/manifests/kustomize/base/argo/workflow-controller-configmap.yaml
@@ -23,6 +23,7 @@ data:
                 key: secretkey
             }
         },
-        archiveLogs: true
+        archiveLogs: true,
+        containerRuntimeExecutor: pns
     }
     }
