--- a/manifests/kustomize/base/params.env
+++ b/manifests/kustomize/base/params.env
@@ -5,5 +5,6 @@ imagePrefix=gcr.io/ml-pipeline
 dbHost=mysql
 dbPort=3306
 mlmdDb=metadb
+cacheDb=cachedb
 pipelineDb=mlpipeline
 bucketName=mlpipeline
