--- a/manifests/kustomize/base/params.yaml
+++ b/manifests/kustomize/base/params.yaml
@@ -22,3 +22,5 @@ varReference:
   kind: Application
 - path: spec/template/spec/containers/image
   kind: Deployment
+- path: overlay/psp
+  kind: PodSecurityPolicy
