--- a/manifests/kustomize/cluster-scoped-resources/kustomization.yaml
+++ b/manifests/kustomize/cluster-scoped-resources/kustomization.yaml
@@ -6,6 +6,7 @@ bases:
 - ../base/argo/cluster-scoped
 - ../base/pipeline/cluster-scoped
 - ../base/cache-deployer/cluster-scoped
+- ../base/overlay/psp
 
 resources:
   - namespace.yaml
